# Pizzeria

./: .gitignore  CMakeLists.txt  boss.c  client.c  firefighter.c
src/: boss.c  boss.h  client.c  client.h  firefighter.c  firefighter.h  globals.c  globals.h  logging.c  logging.h  main.c  pizza.c  pizza.h  pizzeria.c  pizzeria.h  tables.c  tables.h  tests.c  tests.h
src_python/Simulation/: simulation.py
